k8s/nginx-exporter-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-exporter
  namespace: wp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-exporter
  template:
    metadata:
      labels:
        app: nginx-exporter
    spec:
      containers:
      - name: nginx-exporter
        image: nginx/nginx-prometheus-exporter:latest
        args:
        - '-nginx.scrape-uri=http://nginx:80/stub_status'
        ports:
        - containerPort: 9113
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-exporter
  namespace: wp
spec:
  selector:
    app: nginx-exporter
  ports:
  - port: 9113
    targetPort: 9113
    nodePort: 30115
  type: NodePort
